cft/ec2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Part 1 - Build a app stack with CloudFormation

Parameters:
  # AvailabilityZone:
  #   Type: AWS::EC2::AvailabilityZone::Name
  EnvironmentType:
    Description: "Specify the Environment type of the stack."
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - test
      - prod
  AmiID:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Description: "The ID of the AMI."
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  KeyPairName:
    Type: String
    Description: The name of an existing Amazon EC2 key pair in this region to use to SSH into the Amazon EC2 instances.
  IamRole:
    Type: String
    Description: Pass the Iam role that should be used for instance.
  Vpc:
    Type: AWS::EC2::VPC::Id
    Description: Select the VPC to use for your resources.
  Subnet:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Select the subnet to use for your resources

Mappings:
  EnvironmentToInstanceType:
    dev:
      InstanceType: t2.nano
    test:
      InstanceType: t2.micro
    prod:
      InstanceType: t2.small

Resources:
  AppInstance:
    Type: AWS::EC2::Instance
    Properties:
      # AvailabilityZone: !Ref AvailabilityZone
      ImageId: !Ref AmiID
      InstanceType:
        !FindInMap [
          EnvironmentToInstanceType,
          !Ref EnvironmentType,
          InstanceType,
        ]
      KeyName: !Ref KeyPairName
      IamInstanceProfile: !Ref IamRole
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          SubnetId: !Ref Subnet
          GroupSet:
            - !Ref AppSecurityGroup
      Tags:
        - Key: Name
          Value: SSM-Test

  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ["-", [app-security-group, !Ref EnvironmentType]]
      VpcId: !Ref Vpc
      GroupDescription: "Allow HTTP/HTTPS and SSH inbound and outbound traffic"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  # AppEIP:
  #   Type: AWS::EC2::EIP
  #   Properties:
  #     Domain: vpc
  #     InstanceId: !Ref AppInstance
  #     Tags:
  #       - Key: Name
  #         Value: !Join ["-", [app-eip, !Ref EnvironmentType]]

Outputs:
  siteURL:
    Value: !Join ["", ["http://", !GetAtt AppInstance.PublicIp]]
    Description: App URL
